Fixed cell overflow

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
 }
 
 .cell{
-    background-color: lightgray;
+    background-color: white;
 }
 
 .active{
